--- a/xpi/locale/sl/options.dtd
+++ b/xpi/locale/sl/options.dtd
@@ -48,7 +48,7 @@
 <!ENTITY Ctr_emptyfavicon	"Obnovi prazno ikono zaznamka (če je stran ne dobavi)">
 <!ENTITY Ctr_noemptypticon	"Odstrani prazno ikono zaznamka iz pripetih zavihkov">
 <!ENTITY Ctr_e10stab_notd	"Zavihki E10s: odstrani podčrtanje">
-<!ENTITY Ctr_closetab_0		"Zapri zavihek">
+<!ENTITY Ctr_closetab_0		"Gumb Zapri zavihek">
 <!ENTITY Ctr_closetab_1		"Samo na dejavnem zavihku">
 <!ENTITY Ctr_closetab_2		"Nikjer">
 <!ENTITY Ctr_closetab_3		"Na koncu orodne vrstice zavihkov">
