Corrections to the translation

--- a/xpi/locale/sl/options.dtd
+++ b/xpi/locale/sl/options.dtd
@@ -60,7 +60,7 @@
 <!ENTITY Ctr_close_wwltab	"Zapri okno z nazadje vidnim zavihkom (about:config)">
 
 <!ENTITY Ctr_appbutton		"Programski gumb">
-<!ENTITY Ctr_appbutton0		"Gumb onemogočeno">
+<!ENTITY Ctr_appbutton0		"Gumb je onemogočen">
 <!ENTITY Ctr_appbutton1		"Gumb na orodni vrstici">
 <!ENTITY Ctr_appbutton1wt	"Gumb na orodni vrstici (samo besedilo)">
 <!ENTITY Ctr_appbutton2		"Gumb na nazivni vrstici [Firefoxa]">
@@ -79,7 +79,7 @@
 <!ENTITY Ctr_appbuttonc_wh	"Bela barva gumba">
 <!ENTITY Ctr_appbuttonc_cu	"Barva gumba po meri">
 <!ENTITY Ctr_appbuttonI1	"Priporočen je ponovni zagon">
-<!ENTITY Ctr_appbuttonI1e	"Ni vidno na orodni vrstici OS-a Windows, samo na orodni vrstici Firefoxa!">
+<!ENTITY Ctr_appbuttonI1e	"Ni viden na orodni vrstici OS-a Windows, samo na orodni vrstici Firefoxa!">
 <!ENTITY Ctr_appbuttonI2	"Barve gumba so vidne samo na nazivni vrstici in vrstici zavihkov!">
 <!ENTITY Ctr_alttbappb		"Nadomestne ikone brez spustne puščice">
 <!ENTITY Ctr_appbutmhi		"Višji položaj (če je na orodni vrstici zavihkov)">
