--- a/xpi/locale/sl/options.dtd
+++ b/xpi/locale/sl/options.dtd
@@ -8,7 +8,7 @@
 <!ENTITY Ctr_puibseparator	"Ločilo (za meni podokna)">
 <!ENTITY Ctr_navthrobber	"Kazalec dejavnosti">
 <!ENTITY Ctr_sidebarbutton	"(Stranska vrstica)">
-<!ENTITY Ctr_windowcontrols	"Skrči/Razpni/Zapri (Celozaslonski način)">
+<!ENTITY Ctr_windowcontrols	"Skrči/Razpni/Zapri (celozaslonski način)">
 <!ENTITY Ctr_rr				"Zahtevan je ponovni zagon!">
 
 <!ENTITY Ctr_cuibuttons		"Gumbi">
@@ -35,7 +35,7 @@
 <!ENTITY Ctr_tabsontop2		"Zavihki niso na vrhu (v1) --- atribut [tabsontop=false]">
 <!ENTITY Ctr_tabsontop3		"Zavihki niso na vrhu (v2) --- atribut [tabsontop=false]">
 <!ENTITY Ctr_tabsontopW1	"v2 je za nekatere dodatke in samo za celotne teme!">
-<!ENTITY Ctr_tabsontopI1	"Atribut [tabsontop=true/false] se doda k">
+<!ENTITY Ctr_tabsontopI1	"Atribut [tabsontop=true/false] je dodan k">
 <!ENTITY Ctr_tabsintitlebar	"Nazivna vrstica Firefoxa (nastavitev about:config)">
 <!ENTITY Ctr_tabwidthdef	"(privzeto)">
 <!ENTITY Ctr_tabwidthcla	"(klasično)">
@@ -92,7 +92,7 @@
 <!ENTITY Ctr_ui				"Splošen UI">
 <!ENTITY Ctr_nbiconsize0	"Atribut orodne vrstice za krmarjenje 'iconsize'">
 <!ENTITY Ctr_smallnavbut	"Majhni gumbi na orodni vrstici za krmarjenje">
-<!ENTITY Ctr_bfurlbarfix	"Pritrdi polmer obrobe naslovne vrstice">
+<!ENTITY Ctr_bfurlbarfix	"Naredi polmer obrobe naslovne vrstice stalen">
 <!ENTITY Ctr_backforward	"Premakljiva gumba Nazaj/Naprej">
 <!ENTITY Ctr_nbcompact		"Zmanjšaj višino orodne vrstice za krmarjenje">
 <!ENTITY Ctr_hide_bf_popup	"Skrij pojavni meni zgodovine gumba ob kliku miške">
