--- a/xpi/locale/ja/options.dtd
+++ b/xpi/locale/ja/options.dtd
@@ -36,14 +36,14 @@
 <!ENTITY Ctr_tabsontop3		"タブを下にする (v2) --- [tabsontop=false]">
 <!ENTITY Ctr_tabsontopW1	"v2 is for some add-ons and complete themes only!">
 <!ENTITY Ctr_tabsontopI1	"以下に属性[tabsontop=true/false]を加える">
-<!ENTITY Ctr_tabsintitlebar	"Firefoxタイトルバー (about:config設定)">
+<!ENTITY Ctr_tabsintitlebar	"Firefox タイトルバー (about:config設定)">
 <!ENTITY Ctr_tabwidthdef	"(デフォルト)">
 <!ENTITY Ctr_tabwidthcla	"(クラシック)">
-<!ENTITY Ctr_tabminheight	"Height:">
-<!ENTITY Ctr_tabmaxwidth	"max-width:">
-<!ENTITY Ctr_tabminwidth	"min-width:">
-<!ENTITY Ctr_tabwidthinfo	"タブのmin-widthとmax-widthはTabMixPlusで制御されます。">
-<!ENTITY Ctr_tabwidthinfo2	"タブのmin-widthとmax-widthはTabUtilitiesで制御されます。">
+<!ENTITY Ctr_tabminheight	"高さ:">
+<!ENTITY Ctr_tabmaxwidth	"最大幅:">
+<!ENTITY Ctr_tabminwidth	"最小幅:">
+<!ENTITY Ctr_tabwidthinfo	"タブの最小幅と最大幅は Tab Mix Plus で制御されます。">
+<!ENTITY Ctr_tabwidthinfo2	"タブの最小幅と最大幅は Tab Utilities で制御されます。">
 <!ENTITY Ctr_tabwidthinfo3	"Values below 48px will cause glitches in most cases!">
 <!ENTITY Ctr_emptyfavicon	"空 favicon を表示する (サイトが提供しない場合)">
 <!ENTITY Ctr_noemptypticon	"ピン止めタブから空ファビコンを取り除く">
@@ -53,7 +53,7 @@
 <!ENTITY Ctr_closetab_2		"表示しない">
 <!ENTITY Ctr_closetab_3		"ツールバーの最後に表示">
 <!ENTITY Ctr_closetab_4		"ツールバーの最初に表示">
-<!ENTITY Ctr_closetab_5		"全タブ (強制)">
+<!ENTITY Ctr_closetab_5		"全てのタブ (強制)">
 <!ENTITY Ctr_closetab_hfot	"可視タブに対して隠す">
 <!ENTITY Ctr_closealt		"別バージョンのアイコンにする">
 <!ENTITY Ctr_closeonleft	"別の位置に表示">
@@ -77,7 +77,7 @@
 <!ENTITY Ctr_appbuttonc_gr	"灰色">
 <!ENTITY Ctr_appbuttonc_pu	"紫色">
 <!ENTITY Ctr_appbuttonc_wh	"白色">
-<!ENTITY Ctr_appbuttonc_cu	"Custom button color">
+<!ENTITY Ctr_appbuttonc_cu	"任意の色">
 <!ENTITY Ctr_appbuttonI1	"再起動を推奨">
 <!ENTITY Ctr_appbuttonI1e	"WindowsのOSタイトルバーには表示されません。Firefoxタイトルバー上のみです。">
 <!ENTITY Ctr_appbuttonI2	"ボタン色はタイトルバーとタブツールバーのみに表示されます。">
@@ -86,8 +86,8 @@
 <!ENTITY Ctr_appbutbdl		"ボーダーと背景色を隠す">
 <!ENTITY Ctr_dblclclosefx	"ダブルクリックで現在のウィンドウを閉じる">
 <!ENTITY Ctr_appbclmmenus	"Clickable menus inside button menu (New Tab, Print...)">
-<!ENTITY Ctr_appbutonclab	"Title">
-<!ENTITY Ctr_appbutonclab2	"Add title or leave empty">
+<!ENTITY Ctr_appbutonclab	"タイトル">
+<!ENTITY Ctr_appbutonclab2	"タイトルを入力するか、空欄のままにしてください">
 
 <!ENTITY Ctr_ui				"UI 一般">
 <!ENTITY Ctr_nbiconsize0	"ナビゲーションツールバー属性の設定">
@@ -96,7 +96,7 @@
 <!ENTITY Ctr_backforward	"戻る-進むボタンを移動可にする">
 <!ENTITY Ctr_nbcompact		"Reduce navigation toolbars height">
 <!ENTITY Ctr_hide_bf_popup	"マウスを押す時に履歴メニューを隠す">
-<!ENTITY Ctr_bf_space		"Reduce space between buttons (if possible)">
+<!ENTITY Ctr_bf_space		"(可能であれば) ボタン間のスペースを減らす">
 <!ENTITY Ctr_noconicons		"ラベル(戻る、進む、停止、ブックマーク)をもつページコンテキストメニューアイコンを置換する">
 <!ENTITY Ctr_svgfilters		"SVG colors for default toolbar button icons">
 <!ENTITY Ctr_wincontrols	"フルスクリーンウィンドウ制御を移動可にする">
@@ -135,13 +135,13 @@
 <!ENTITY Ctr_tabmokcolor4	"White color for empty dotted tab favicon">
 
 <!ENTITY Ctr_navthrobber1	"Clicking activity indicator opens specified url:">
-<!ENTITY Ctr_navthrobber2	"Add url or leave empty">
+<!ENTITY Ctr_navthrobber2	"URL を入力するか、空欄のままにしてください">
 
 <!ENTITY Ctr_tab_tf_info1	"色名、16 進コード、rgb(a)、hsl(a) の値をサポートします。">
 <!ENTITY Ctr_tab_tf_info2	"入力値は検証されません。">
-<!ENTITY Ctr_tabact_t		"active">
+<!ENTITY Ctr_tabact_t		"アクティブ">
 <!ENTITY Ctr_tabhov_t		"hover">
-<!ENTITY Ctr_tabnor_t		"default">
+<!ENTITY Ctr_tabnor_t		"デフォルト">
 <!ENTITY Ctr_tabpen_t		"未読み込み">
 <!ENTITY Ctr_tabunr_t		"未読">
 <!ENTITY Ctr_ntab_t			"新しいタブ">
@@ -160,9 +160,9 @@
 <!ENTITY Ctr_notabhov		"Enabled settings override 'hovered' settings">
 <!ENTITY Ctr_tabc_act_tb	"Background color on toolbars">
 
-<!ENTITY Ctr_urlbar			"Urlbar">
-<!ENTITY Ctr_starinurl		"URLバーにスターボタンを表示する">
-<!ENTITY Ctr_feedinurl		"URLバーにフィードボタンを表示する">
+<!ENTITY Ctr_urlbar			"URL バー">
+<!ENTITY Ctr_starinurl		"URL バーにスターボタンを表示する">
+<!ENTITY Ctr_feedinurl		"URL バーにフィードボタンを表示する">
 <!ENTITY Ctr_hideurelstop	"URL バーの中止&amp;再読み込みボタンを隠す">
 <!ENTITY Ctr_urlbardropm	"Move dropmarker to urlbars end">
 <!ENTITY Ctr_hideprbutton	"Hide notification icon when a popup gets blocked">
@@ -235,7 +235,7 @@
 <!ENTITY Ctr_cuibotbuttons	"'カスタマイズ'モードの追加ボタンを表示する">
 <!ENTITY Ctr_bookmarkoinpw	"'Open in a new private window' entry in bookmarks context menu">
 
-<!ENTITY Ctr_experttweaks	"Advanced">
+<!ENTITY Ctr_experttweaks	"拡張設定">
 <!ENTITY Ctr_fx33layers		"Firefox 33+ introduced 'new render features' currently responsible for 'hanging tabs' on some systems. Unchecking this preference resolves this issue.">
 <!ENTITY Ctr_fx34search		"Firefox 34+ introduced a 'new seach ui'. Unchecking this preference returns the 'old seach ui'.">
 <!ENTITY Ctr_fx34loop		"Firefox 34+ introduced 'calling and conversation' features. Unchecking this preference removes them.">
